[package]
name = "camino"
description = "UTF-8 paths"
version = "1.0.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/sunshowers/camino"
authors = [
    "Without Boats <saoirse@without.boats>",
    "Ashley Williams <ashley666ashley@gmail.com>",
    "Steve Klabnik <steve@steveklabnik.com>",
]
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
anyhow = "1.0.38"
structopt = "0.3.21"
serde_json = "1.0.62"

[features]
serde1 = ["serde"]

[[example]]
name = "serde"
required-features = ["serde1"]
