[package]
name = "camino"
description = "UTF-8 paths"
version = "1.0.5"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = [
    "paths",
    "utf8",
    "unicode",
    "filesystem",
]
categories = [
    "development-tools",
    "filesystem",
    "os",
]
repository = "https://github.com/withoutboats/camino"
documentation = "https://docs.rs/camino"
authors = [
    "Without Boats <saoirse@without.boats>",
    "Ashley Williams <ashley666ashley@gmail.com>",
    "Steve Klabnik <steve@steveklabnik.com>",
    "Rain <rain@sunshowers.io>"
]
edition = "2018"
exclude = [
    ".cargo/**/*",
    ".github/**/*",
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
anyhow = "1.0.38"
structopt = "0.3.21"
serde_json = "1.0.62"

[features]
serde1 = ["serde"]

[[example]]
name = "serde"
required-features = ["serde1"]
