[workspace]
members = ["."]

[package]
name = "camino"
description = "UTF-8 paths"
version = "1.2.4"
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.61.0"
keywords = ["paths", "utf8", "unicode", "filesystem"]
categories = ["development-tools", "filesystem", "os"]
repository = "https://github.com/camino-rs/camino"
documentation = "https://docs.rs/camino"
authors = [
    "Without Boats <saoirse@without.boats>",
    "Ashley Williams <ashley666ashley@gmail.com>",
    "Steve Klabnik <steve@steveklabnik.com>",
    "Rain <rain@sunshowers.io>",
]
edition = "2021"
exclude = [".cargo/**/*", ".github/**/*"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg=doc_cfg"]

[package.metadata.release]
pre-release-replacements = [
    { file = "CHANGELOG.md", search = "Unreleased", replace = "[{{version}}]", min = 1 },
    { file = "CHANGELOG.md", search = "ReleaseDate", replace = "{{date}}", min = 1 },
    { file = "CHANGELOG.md", search = "<!-- next-header -->", replace = "<!-- next-header -->\n## Unreleased - ReleaseDate\n", exactly = 1 },
    { file = "CHANGELOG.md", search = "<!-- next-url -->", replace = "<!-- next-url -->\n[{{version}}]: https://github.com/camino-rs/camino/releases/tag/camino-{{version}}", exactly = 1 },
]

[dependencies]
proptest = { version = "1.0.0", optional = true }
serde_core = { version = "1", optional = true }

[dev-dependencies]
bincode = "1"
serde_bytes = "0.11.8"
serde = { version = "1.0.223", features = ["derive"] }

[features]
serde1 = ["dep:serde_core"]
proptest1 = ["dep:proptest"]
